Fix overflow iphone 6 7 8

--- a/css/dante.css
+++ b/css/dante.css
@@ -8,7 +8,7 @@
   z-index: 4;
 }
 #dante-model-front img, #nero-model-front img{
-  margin-left: 20%;
+  margin-left: 10%;
   width: 90%;
 }
 #dante-model-back, #nero-model-back{
