--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,7 +32,7 @@
     height: 70vh;
   }
   #dante-model-front img, #nero-model-front img{
-    margin-left: 20%;
+    margin-left: 0%;
     width: 100%;
   }
   #dante-model-back img, #nero-model-back img{
